--- a/README.Rmd
+++ b/README.Rmd
@@ -37,7 +37,7 @@ separated files.
 <!-- ``` -->
 
 You can install the development version from 
-[GitHub](https://github.com/special-uor) with:
+[GitHub](https://github.com/special-uor/ageR) with:
 ``` r
 # install.packages("remotes")
 remotes::install_github("special-uor/ageR")
@@ -57,38 +57,50 @@ appropriate file structure (as shown previously).
 #### Create input structure
 1. Start by creating a data frame for the sampling depths, this should have two 
 numeric columns called `id` and `depth`:
-```{r bacon-create-input-step1}
-sample_depths <- data.frame(id = 1:100,
-                            depth = seq(0, 500, length.out = 100))
-knitr::kable(head(sample_depths))
-```
+    ```{r bacon-create-input-step1}
+    sample_depths <- data.frame(id = 1:100,
+                                depth = seq(0, 500, length.out = 100))
+    knitr::kable(head(sample_depths))
+    ```
 
 2. Create a data frame with the core's data, this should have at least four 
 columns. The first column can be of character type and the remaining must be
 numeric. The column names should be `labID`, `age`, `error`, and `depth`. 
 Optionally, a fifth column, `cc`, can be included to manually select the 
 calibration curve for each observation.
-```{r bacon-create-input-step2}
-core <- data.frame(labID = paste0("X", sprintf("%03d", 1:5)),
-                   age = c(50, 200, 1150, 2060, 4050),
-                   error = c(10, 15, 5, 1, 70),
-                   depth = c(5, 100, 230, 300, 450),
-                   cc = 1)
-knitr::kable(core)
-```
+    ```{r bacon-create-input-step2}
+    core <- data.frame(labID = paste0("X", sprintf("%03d", 1:5)),
+                       age = c(50, 200, 1150, 2060, 4050),
+                       error = c(10, 15, 5, 1, 70),
+                       depth = c(5, 100, 230, 300, 450),
+                       cc = 1)
+    knitr::kable(core)
+    ```
 
-3. Call the `ageR::create_input` function. The first parameter should be a list
-containing the previous data frames, which must be called `sample` and `core`. 
+3. (Optional) Create a data frame with the hiatuses depths, this should have two
+numeric columns called `id` and `depth`:
+    ```{r bacon-create-input-step3}
+    hiatus <- data.frame(id = c(1, 2),
+                         depth = c(50, 150))
+    knitr::kable(hiatus)
+    ```
+  
+4. Call the `ageR::create_input` function. The first parameter should be a list
+containing the previous data frames, which must be called `sample_depths`, 
+`core`, and `hiatus` (if included). 
 Next, a working directory (`wdir`), the entity's name, and optionally the age 
 model's name (by default is Bacon).
-```{r bacon-create-input-step3, eval = FALSE}
-ageR::create_input(data = list(sample = sample_depths, core = core), 
-                   wdir = "./", 
-                   entity = "X",
-                   am = "bacon")
-```
+    ```{r bacon-create-input-step4, eval = FALSE}
+    ageR::create_input(data = list(sample_depths = sample_depths, 
+                                   core = core,
+                                   # Optional
+                                   hiatus = hiatus), 
+                       wdir = "./", 
+                       entity = "X",
+                       am = "bacon")
+    ```
 
 #### Run bacon
 ```{r bacon-run, eval = FALSE}
-ageR::runBacon(wdir = "./", entity = "X", postbomb = 0, cc = 0)
+ageR::runBacon(wdir = "./", entity = "X", postbomb = 0, cc = 1)
 ```
