--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,6 @@ knitr::opts_chunk$set(
 <!-- <img src="inst/images/logo.png" alt="logo" align="right" height=200px/> -->
 
 <!-- badges: start -->
-<!-- `r badger::badge_code_size("special-uor/ageR")` -->
 `r badger::badge_devel("special-uor/ageR", "yellow")`
 `r badger::badge_github_actions("special-uor/ageR")`
 `r badger::badge_cran_release("ageR", "black")`
@@ -189,4 +188,5 @@ print(out$acc[[idx]])
 ```{r clean-outputs, echo = FALSE, eval = TRUE}
 . <- lapply(list.files(".", "X_"), file.remove)
 unlink("X", TRUE, TRUE)
+unlink("ccurves", TRUE, TRUE)
 ```
