--- a/README.Rmd
+++ b/README.Rmd
@@ -155,7 +155,7 @@ This is particular useful for "neo-tropical" sites. It involves three steps:
 2. Create a mixed calibration curve with `ageR::mix_curves`. The following example uses a 50/50 mix between `IntCal20` (`cc1 = 1`) and `SHCal20` (`cc2 = 3`).
     ```{r bacon-run-mix-curves-step2}
     ccdir <- "./ccurves"
-    ageR::mix_curves(proportion = 0.5, cc1 = 1, cc = 3, name = "neotropics.14C", dirname = ccdir)
+    ageR::mix_curves(proportion = 0.5, cc1 = 1, cc = 3, name = "neotropics.14C", dir = ccdir)
     ```
 3. Add two new parameters to the `ageR::Bacon` call:
     ```{r bacon-run-mix-curves-step3, eval = FALSE}
